Исправление ошибок